--- a/Integration/Absenteeism-Integration.ipynb
+++ b/Integration/Absenteeism-Integration.ipynb
@@ -13,6 +13,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ignore warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from absenteeism_module import *"
    ]
   },
@@ -25,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -757,7 +768,7 @@
        "39          1         1     1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -862,7 +873,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.127203</td>\n",
+       "      <td>0.143548</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -878,7 +889,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.864029</td>\n",
+       "      <td>0.778989</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -894,7 +905,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.265096</td>\n",
+       "      <td>0.249779</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -910,7 +921,7 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.202894</td>\n",
+       "      <td>0.229625</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -926,7 +937,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.719413</td>\n",
+       "      <td>0.565841</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -942,7 +953,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.707978</td>\n",
+       "      <td>0.577664</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -958,8 +969,8 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.570469</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.468157</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -974,7 +985,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.127203</td>\n",
+       "      <td>0.143548</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -990,7 +1001,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.133909</td>\n",
+       "      <td>0.137107</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1006,8 +1017,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.523575</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.383472</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -1022,7 +1033,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.437458</td>\n",
+       "      <td>0.498928</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1038,7 +1049,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.639695</td>\n",
+       "      <td>0.527925</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1054,7 +1065,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
-       "      <td>0.344741</td>\n",
+       "      <td>0.420026</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1070,7 +1081,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.127203</td>\n",
+       "      <td>0.143548</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1086,7 +1097,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.077404</td>\n",
+       "      <td>0.115651</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1102,7 +1113,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.162866</td>\n",
+       "      <td>0.147260</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1118,7 +1129,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.639695</td>\n",
+       "      <td>0.527925</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1134,8 +1145,8 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.508818</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.396173</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -1150,7 +1161,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.380199</td>\n",
+       "      <td>0.384423</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1166,8 +1177,8 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.520152</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.400229</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -1182,7 +1193,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.139260</td>\n",
+       "      <td>0.139122</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1198,7 +1209,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
-       "      <td>0.053484</td>\n",
+       "      <td>0.121612</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1214,8 +1225,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.534880</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.387481</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -1230,8 +1241,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.534880</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.387481</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -1246,7 +1257,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
-       "      <td>0.053484</td>\n",
+       "      <td>0.121612</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1262,8 +1273,8 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.514699</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.429100</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -1278,7 +1289,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
-       "      <td>0.355062</td>\n",
+       "      <td>0.424155</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1294,7 +1305,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.640744</td>\n",
+       "      <td>0.602353</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1310,7 +1321,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.139260</td>\n",
+       "      <td>0.139122</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1326,7 +1337,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.640744</td>\n",
+       "      <td>0.602353</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1342,7 +1353,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.247281</td>\n",
+       "      <td>0.259186</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1358,7 +1369,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.139260</td>\n",
+       "      <td>0.139122</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1374,7 +1385,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.483342</td>\n",
+       "      <td>0.478019</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1390,7 +1401,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.263038</td>\n",
+       "      <td>0.262197</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1406,7 +1417,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.965609</td>\n",
+       "      <td>0.905882</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1422,7 +1433,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.911216</td>\n",
+       "      <td>0.805629</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1438,7 +1449,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.757500</td>\n",
+       "      <td>0.627505</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1454,7 +1465,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
-       "      <td>0.019140</td>\n",
+       "      <td>0.039227</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1470,7 +1481,7 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.255343</td>\n",
+       "      <td>0.221302</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1486,7 +1497,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.065876</td>\n",
+       "      <td>0.088745</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1579,49 +1590,49 @@
        "39                     179   53               25          0         1     1   \n",
        "\n",
        "    Probability  Prediction  \n",
-       "0      0.127203           0  \n",
-       "1      0.864029           1  \n",
-       "2      0.265096           0  \n",
-       "3      0.202894           0  \n",
-       "4      0.719413           1  \n",
-       "5      0.707978           1  \n",
-       "6      0.570469           1  \n",
-       "7      0.127203           0  \n",
-       "8      0.133909           0  \n",
-       "9      0.523575           1  \n",
-       "10     0.437458           0  \n",
-       "11     0.639695           1  \n",
-       "12     0.344741           0  \n",
-       "13     0.127203           0  \n",
-       "14     0.077404           0  \n",
-       "15     0.162866           0  \n",
-       "16     0.639695           1  \n",
-       "17     0.508818           1  \n",
-       "18     0.380199           0  \n",
-       "19     0.520152           1  \n",
-       "20     0.139260           0  \n",
-       "21     0.053484           0  \n",
-       "22     0.534880           1  \n",
-       "23     0.534880           1  \n",
-       "24     0.053484           0  \n",
-       "25     0.514699           1  \n",
-       "26     0.355062           0  \n",
-       "27     0.640744           1  \n",
-       "28     0.139260           0  \n",
-       "29     0.640744           1  \n",
-       "30     0.247281           0  \n",
-       "31     0.139260           0  \n",
-       "32     0.483342           0  \n",
-       "33     0.263038           0  \n",
-       "34     0.965609           1  \n",
-       "35     0.911216           1  \n",
-       "36     0.757500           1  \n",
-       "37     0.019140           0  \n",
-       "38     0.255343           0  \n",
-       "39     0.065876           0  "
+       "0      0.143548           0  \n",
+       "1      0.778989           1  \n",
+       "2      0.249779           0  \n",
+       "3      0.229625           0  \n",
+       "4      0.565841           1  \n",
+       "5      0.577664           1  \n",
+       "6      0.468157           0  \n",
+       "7      0.143548           0  \n",
+       "8      0.137107           0  \n",
+       "9      0.383472           0  \n",
+       "10     0.498928           0  \n",
+       "11     0.527925           1  \n",
+       "12     0.420026           0  \n",
+       "13     0.143548           0  \n",
+       "14     0.115651           0  \n",
+       "15     0.147260           0  \n",
+       "16     0.527925           1  \n",
+       "17     0.396173           0  \n",
+       "18     0.384423           0  \n",
+       "19     0.400229           0  \n",
+       "20     0.139122           0  \n",
+       "21     0.121612           0  \n",
+       "22     0.387481           0  \n",
+       "23     0.387481           0  \n",
+       "24     0.121612           0  \n",
+       "25     0.429100           0  \n",
+       "26     0.424155           0  \n",
+       "27     0.602353           1  \n",
+       "28     0.139122           0  \n",
+       "29     0.602353           1  \n",
+       "30     0.259186           0  \n",
+       "31     0.139122           0  \n",
+       "32     0.478019           0  \n",
+       "33     0.262197           0  \n",
+       "34     0.905882           1  \n",
+       "35     0.805629           1  \n",
+       "36     0.627505           1  \n",
+       "37     0.039227           0  \n",
+       "38     0.221302           0  \n",
+       "39     0.088745           0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
